# computer-graphics

./: CMakeLists.txt  README.md
Computer-Graphics/: CMakeLists.txt  Circle.h  Clipping.h  CurveFilling.h  FillingAlgorithms.h  Line.h  LineFillingCircle.h  allCircles.h  allLines.h  elipses.h  main.cpp  transformation.h
